--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -586,6 +586,11 @@ body.nav-opened .site-wrapper {
    4. General - The main styles for the the theme
    ========================================================================== */
 
+.reading-time {
+    font-size: 0.8em;
+    color: #9EABB3;
+}
+
 /* Big cover image on the home page */
 .main-header {
     position: relative;
@@ -1771,11 +1776,6 @@ body.page-template .post-title {
     float: left;
 }
 
-.post-subtitle {
-    margin-top: -20px !important;
-}
-
-
 /* ==========================================================================
    12. Media Queries - Smaller than 900px
    ========================================================================== */
@@ -2036,9 +2036,9 @@ body.page-template .post-title {
         line-height: 1.65em;
     }
 
-    .post-date {
+    /* .post-date {
         display: none;
-    }
+    } */
 
     .post-template .post-header,
     .page-template .post-header {
